<resources>
    <string name="app_name">Ashraf-Ehab_Mohamed-Radi-Task</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_your_account">Login to your Account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Sign in</string>
    <string name="already_have_account">Don\'t have an account?</string>
    <string name="sign_in">Sign Up</string>
    <string name="create_your_account">Create your Account</string>
    <string name="re_enter_password">Re-Enter Password</string>
    <string name="register">Register</string>
    <string name="dont_have_account">Already have an account?</string>
    <string name="name">Name</string>
    <string name="settings">Settings</string>
    <string name="personal_account">Personal Account</string>
    <string name="save">Save</string>
    <string name="App_Shared">app-shared_preference</string>
</resources>