<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp"
        android:layout_centerInParent="true"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bold"
            android:text="@string/create_your_account"
            android:textSize="45sp"
            android:textColor="@color/new_black"
            />

        <EditText
            android:id="@+id/name_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:textColor="@color/new_black"
            android:layout_marginTop="40dp"
            android:background="@drawable/auth_et_shape"
            android:textColorHint="@color/new_dark_grey"
            android:inputType="text"
            android:padding="15dp"
            android:gravity="center_vertical"
            android:fontFamily="@font/medium"

            />


        <EditText
            android:id="@+id/email_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textColor="@color/new_black"
            android:layout_marginTop="15dp"
            android:background="@drawable/auth_et_shape"
            android:textColorHint="@color/new_dark_grey"
            android:inputType="textEmailAddress"
            android:padding="15dp"
            android:gravity="center_vertical"
            android:fontFamily="@font/medium"

            />

        <EditText
            android:id="@+id/password_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textColor="@color/new_black"
            android:layout_marginTop="15dp"
            android:background="@drawable/auth_et_shape"
            android:textColorHint="@color/new_dark_grey"
            android:inputType="textPassword"
            android:padding="15dp"
            android:gravity="center_vertical"
            android:fontFamily="@font/medium"

            />

        <EditText
            android:id="@+id/repass_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/re_enter_password"
            android:textColor="@color/new_black"
            android:layout_marginTop="15dp"
            android:background="@drawable/auth_et_shape"
            android:textColorHint="@color/new_dark_grey"
            android:inputType="textPassword"
            android:padding="15dp"
            android:gravity="center_vertical"
            android:fontFamily="@font/medium"

            />


        <Button
            android:id="@+id/register_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:background="@drawable/main_button_shape"
            android:textColor="@color/white"
            android:padding="16dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/semi_bold"
            />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="35dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/medium"
                android:text="@string/dont_have_account"
                android:textSize="18sp"
                android:textColor="@color/new_greyy_color"
                />

            <TextView
                android:id="@+id/sign_in_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/medium"
                android:text="@string/log_in"
                android:textSize="18sp"
                android:textColor="@color/new_main_color"
                android:layout_marginStart="6dp"
                />



        </LinearLayout>






    </LinearLayout>




</RelativeLayout>